# copy-creator

./: .gitignore  README.md  README_EN.md
copy-creator/: package.json  pnpm-lock.yaml
copy-creator/src/: App.tsx  main.tsx
copy-creator/src-tauri/: Cargo.toml  tauri.conf.json
copy-creator/src-tauri/capabilities/: default.json
copy-creator/src-tauri/src/: clipboard.rs  db.rs  lib.rs  paste.rs  selection.rs  shortcut.rs  translator.rs  tray.rs
copy-creator/src/components/: SettingsContent.tsx
copy-creator/src/components/RadialMenu/: index.tsx
copy-creator/src/components/TranslatePopup/: index.tsx
copy-creator/src/components/settings/: LanguageSection.tsx  ShortcutSection.tsx  StartupSection.tsx  StorageSection.tsx  TranslationSection.tsx  index.ts
copy-creator/src/i18n/: en.json  zh-CN.json
copy-creator/src/pages/: TranslationPage.tsx
copy-creator/src/stores/: clipboardStore.ts  settingsStore.ts
copy-creator/src/styles/: base.css  index.css  layout.css  settings.css  translate-popup.css  translation.css
copy-creator/src/types/: index.ts
